swagger en cours, exemple TODO et response
