# controllers/auth_controller.js
@@ -28,9 +28,15 @@ const generateRefreshToken = (data) => {
 };
 
 exports.register = async (req, res) => {
-  // #swagger.tags = ['Auth']
-  // #swagger.description = 'Service to register a new user for the menu API';
-  // #swagger.summary = "Service to register a new user";
+  /* #swagger.tags = ['Auth']
+   #swagger.description = 'Service to register a new user for the menu API';
+   #swagger.summary = "Service to register a new user";
+   #swagger.parameters['obj'] = {
+        in: 'body',
+        description: 'user Signin information',
+        schema: { $ref: "#/definitions/AddUser" }
+   }
+  } */
   const data = req.body;
   if (!isValid(userSchema, req.body))
     return res.status(403).send({ message: "invalid" });
@@ -64,6 +70,16 @@ exports.login = async (req, res) => {
   // #swagger.tags = ['Auth']
   // #swagger.description = 'Service to login a user into menuAPI';
   // #swagger.summary = "Service to log a  user";
+  /* #swagger.responses[200] = {
+                description: 'Some description...',
+                schema: {
+    "message": "you are connected!",
+    "id": "DKeFxdgpRpHGfCKwNx7D",
+    "jwt": "A very long token",
+    "refreshJwt": "An other very long token!"
+}
+        } */
+
   const { email, password } = req.body;
   const user = fireStore.collection("Users").where("email", "==", email);
 
@@ -106,7 +122,10 @@ exports.login = async (req, res) => {
 exports.me = (req, res) => {
   // #swagger.tags = ['Auth']
   // #swagger.description = 'Service to get information about current  user';
-  // #swagger.summary = "Service tto get information";
+  // #swagger.summary = "Service to get information";
+  /* #swagger.security = [{
+    "bearerAuth": []
+}]  */
   const user = req.user;
 
   if (user.admin) return res.status(200).send({ message: "admin you are" });
